<resources>
    <string name="app_name">MDK_PZ_12</string>
    <string name="Value1">TODO</string>
    <string name="Text1">КАРАОКЕ</string>
    <string name="Screen1">TODO</string>
    <string name="text2">Красная-красная кровь</string>
    <string name="text3">Звезда по имени солнце</string>
    <string name="text4" />
    <string name="text5">Через час уже просто земля</string>
    <string name="text6">Через два на ней цветы и трава</string>
    <string name="text7">Через три она снова жива</string>
    <string name="text8">И согрета лучами звезды по имени солнце</string>
    <string name="Screen3">TODO</string>
    <string name="Screen2">TODO</string>
    <string name="textview1">TextView</string>
    <string name="op1">Каталог</string>
    <string name="op2">Избранное</string>
    <string name="op3">Поиск</string>
    <string name="op4">Выход</string>
    <string name="to1">TODO</string>
    <string name="to2">TODO</string>
    <string name="to3">TODO</string>
    <string name="to4">TODO</string>
    <string name="do1">TODO</string>
    <string name="d02">TODO</string>
    <string name="do3">TODO</string>
    <string name="do5">TODO</string>
    <string name="do6">TODO</string>
    <string name="do7">TODO</string>
    <string name="do8">TODO</string>
    <string name="do9">TODO</string>
    <string name="od1">TODO</string>
    <string name="od2">TODO</string>
    <string name="od3">TODO</string>
    <string name="od4">TODO</string>
    <string name="od6">TODO</string>
    <string name="od6">TODO</string>
    <string name="od">TODO</string>
</resources>