<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Screen2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/screenall" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="450dp"
        android:layout_height="415dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#8B000000"
                android:contentDescription="@string/to1"
                app:srcCompat="@android:drawable/presence_audio_busy" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:background="#8B000000"
                android:paddingTop="15dp"
                android:text="@string/op1"
                android:textColor="#FFFFFF"
                android:textSize="48sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="#8B000000"
                android:contentDescription="@string/to2"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:background="#8B000000"
                android:paddingTop="15dp"
                android:text="@string/op2"
                android:textColor="#FFFFFF"
                android:textSize="48sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="#8B000000"
                android:contentDescription="@string/to3"
                app:srcCompat="@android:drawable/ic_menu_search" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:background="#8B000000"
                android:paddingTop="15dp"
                android:text="@string/op3"
                android:textColor="#FFFFFF"
                android:textSize="48sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="#8B000000"
                android:contentDescription="@string/to4"
                app:srcCompat="@android:drawable/presence_offline" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:background="#8B000000"
                android:paddingTop="15dp"
                android:text="@string/op4"
                android:textColor="#FFFFFF"
                android:textSize="48sp" />

        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="525dp"
        android:layout_marginLeft="525dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="305dp"
        android:layout_marginRight="305dp"
        android:layout_marginBottom="347dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/image1"
        android:contentDescription="@string/do1" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="665dp"
        android:layout_marginLeft="665dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:layout_marginBottom="347dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/image3"
        android:contentDescription="@string/d02" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="152dp"
        android:layout_height="129dp"
        android:layout_marginStart="804dp"
        android:layout_marginLeft="804dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="348dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/image6"
        android:contentDescription="@string/do8" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="207dp"
        android:layout_height="142dp"
        android:layout_marginStart="525dp"
        android:layout_marginLeft="525dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="228dp"
        android:layout_marginRight="228dp"
        android:layout_marginBottom="193dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/image4"
        android:contentDescription="@string/do7" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="213dp"
        android:layout_height="142dp"
        android:layout_marginStart="740dp"
        android:layout_marginLeft="740dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="194dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/image9"
        android:contentDescription="@string/do9" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="525dp"
        android:layout_marginLeft="525dp"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="305dp"
        android:layout_marginRight="305dp"
        android:layout_marginBottom="51dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/image2"
        android:contentDescription="@string/do3" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="665dp"
        android:layout_marginLeft="665dp"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:layout_marginBottom="51dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/image11"
        android:contentDescription="@string/do6" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="146dp"
        android:layout_height="126dp"
        android:layout_marginStart="804dp"
        android:layout_marginLeft="804dp"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/image5"
        android:contentDescription="@string/do5" />

</androidx.constraintlayout.widget.ConstraintLayout>